[tool.poetry]
name = "piw-example"
description = "PIK Interactive Webapp Example"
version = "0.1.0"
authors = ["Philipp Verpoort <philipp.verpoort@pik-potsdam.de>"]
readme = "README.md"
packages = [{include = "piw_example"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
